# codelayers

./: .gitignore  LICENSE  pyproject.toml
src/codelayers/: __init__.py  __main__.py  app.py  cli.py
src/codelayers/ingestion/: __init__.py  discovery.py  jedi_analyzer.py  messages.py  models.py  parser.py  runner.py
src/codelayers/ui/: __init__.py
src/codelayers/ui/widgets/: __init__.py  ingestion_modal.py  query_interface.py  repo_browser.py
src/codequery/: __main__.py  app.py  cli.py
src/codequery/ingestion/: __init__.py  discovery.py  jedi_analyzer.py  messages.py  models.py  parser.py  runner.py
src/codequery/ui/: __init__.py  styles.tcss
src/codequery/ui/widgets/: ingestion_modal.py
test_repo/: examples.py  main.py
